[metadata]
name = common-game-maths-alexfreyr
version = 1.0.0
author = Alexander Freyr
author_email = alex@alexfreyr.com
description = A small package consisting of common math objects used in creating games
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires >= 3.6

[options.packages.find]
where = src